# BLDC_MotorControl_Pico

./: CMakeLists.txt  README.md  flashScript.bat
include/: system.h
include/console/: debug.h  trace.h
include/ifaces/: board.h  foc.h
include/math_blocks/: clarke.h  ipark.h  park.h  pi.h  pid_grando.h  rampgen.h  rmp_cntl.h  speed_fr.h  svgen.h
include/peripherals/: bldcAdc.h
include/utils/: sysTime.h  utils.h
src/: main.c  system.c
src/console/: debug.c  trace.c
src/ifaces/: board.c  foc.c
src/peripherals/: bldcAdc.c
src/utils/: sysTime.c  utils.c
